--- a/src/app/development/vehicle-playground/vehicle-playground.component.scss
+++ b/src/app/development/vehicle-playground/vehicle-playground.component.scss
@@ -5,5 +5,18 @@
 }
 
 canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
   background: yellow;
+}
+
+.debug-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  z-index: 10000;
 }
