--- a/src/app/development/playground/playground.component.scss
+++ b/src/app/development/playground/playground.component.scss
@@ -17,6 +17,8 @@ canvas {
   left: 0;
   width: 100vw;
   height: 100vh;
+  box-sizing: border-box;
+  padding: 10px;
   overflow: hidden;
   z-index: 10000;
 }
